cmake_minimum_required(VERSION 3.2)
project(spi)

set(CMAKE_C_STANDARD 11)
add_library(spi SHARED spi.cpp)
add_library(oled SHARED oled.cpp)
add_library(gpio SHARED gpio_common.cpp)
add_executable(spitest spitest.cpp)
add_executable(test test.cpp)
add_executable(main main.c)
#add_executable(spitest spitest.cpp)
target_link_libraries(test spi gpio)
add_executable(screen screen.cpp)
target_link_libraries(screen oled gpio)
add_executable(screen_test screen_test.cpp)
target_link_libraries(screen_test oled gpio)
add_executable(gpio_test gpio_test.cpp)
target_link_libraries(gpio_test oled gpio)

